# vessel-mask

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: brain_vessel.md
scripts/: download_topcow_models.py
src/vessel_mask/: __init__.py  cli.py  config.py  io.py  topcow_runner.py
